# verification

./: .gitmodules  temp.py
dafny/session-17/: ADT.dfy  (+6 more)
liquid-haskell/session20/: session20.cabal
liquid-haskell/session20/.stack-work/: stack.sqlite3
liquid-haskell/session20/.stack-work/ghci/080c0451/: cabal_macros.h
liquid-haskell/session20/.stack-work/ghci/3563333e/: cabal_macros.h
liquid-haskell/session20/.stack-work/ghci/d7c3d667/: cabal_macros.h
liquid-haskell/session20/.stack-work/install/x86_64-linux-tinfo6/d75bdb7e14101d16d17c0fdbe3008a7eba080e3f578f80183065eed3fbe4ef7c/9.2.5/pkgdb/: package.cache  session20-0.1.0.0-A6BJtLXVdCR9OUp5HDKZbt.conf
liquid-haskell/session20/app/: Main.hs
liquid-haskell/session20/app/.liquid/: Main.hs.bak  Main.hs.cst.html  Main.hs.err  Main.hs.html  Main.hs.json  Main.hs.smt2  Main.hs.vim.annot
liquid-haskell/session20/src/: ExerciseVictor.hs  LHExercises.hs  NumericMeasures.lhs
liquid-haskell/session20/src/.liquid/: Demo.hs.bak  Demo.hs.cst.html  Demo.hs.err  Demo.hs.html  Demo.hs.json  Demo.hs.smt2  Demo.hs.vim.annot  LHExercises.hs.bak  LHExercises.hs.cst.html  LHExercises.hs.err  LHExercises.hs.html  LHExercises.hs.json  LHExercises.hs.smt2  LHExercises.hs.vim.annot
liquid-haskell/session20/src/Demo/.liquid/: Client.hs.cst.html  Client.hs.err  Client.hs.html  Client.hs.json  Client.hs.smt2  Client.hs.vim.annot  Erase.hs.cst.html  Erase.hs.err  Erase.hs.evals.smt2  Erase.hs.html  Erase.hs.json  Erase.hs.smt2  Erase.hs.vim.annot  Lib.hs.cst.html  Lib.hs.err  Lib.hs.html  Lib.hs.json  Lib.hs.smt2  Lib.hs.vim.annot
(+129 files in other folders)
