cabal-version: 1.12

name:           session20
version:        0.1.0.0
homepage:
bug-reports:
author:         alvarorp00
maintainer:     alvarorp00@gmail.com
copyright:      
license:        
license-file:   
build-type:     Simple

library
  exposed-modules:
      LHExercises
  hs-source-dirs:
      src
  build-depends:
      liquid-prelude,
      liquid-vector,
      liquidhaskell
  if impl(ghc >= 9.2)
    build-depends:
      base,
      containers,
      vector
  else
    build-depends:
      liquid-base,
      liquid-containers
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell

executable session20
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base,
      session20,
      liquidhaskell
  -- if impl(ghc >= 9.2)
  --   build-depends:
  --     base,
  --     containers,
  --     vector
  -- else
  --   build-depends:
  --     liquid-base,
  --     liquid-containers
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
```